registrazione login e scheletro dashboard completati

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.0.1",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
@@ -17,7 +18,10 @@
     "@angular/material": "^20.0.1",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "lucide-angular": "^0.503.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.6",
+    "md5": "^2.3.0",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
@@ -28,7 +32,9 @@
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
+    "@angular/localize": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/md5": "^2.3.5",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.7.0",
