--- a/package.json
+++ b/package.json
@@ -10,29 +10,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.0.1",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/material": "^20.0.1",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "lucide-angular": "^0.503.0",
+    "@angular/animations": "^19.2.10",
+    "@angular/cdk": "^19.2.14",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.14",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/router": "^19.2.0",
     "@popperjs/core": "^2.11.8",
+    "@primeng/themes": "^19.1.3",
     "bootstrap": "^5.3.6",
+    "chart.js": "^4.4.9",
+    "lucide-angular": "^0.503.0",
     "md5": "^2.3.0",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@rive-app/canvas": "^2.29.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.0",
-    "@angular/cli": "^20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
-    "@angular/localize": "^20.0.0",
+    "@angular-devkit/build-angular": "^19.2.6",
+    "@angular/cli": "^19.2.6",
+    "@angular/compiler-cli": "^19.2.0",
+    "@angular/localize": "^19.2.5",
     "@types/jasmine": "~5.1.0",
     "@types/md5": "^2.3.5",
     "@types/sockjs-client": "^1.5.4",
