--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.2.0",
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.1.3",
+    "@rive-app/canvas": "^2.29.0",
+    "@stomp/stompjs": "^7.1.1",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "lucide-angular": "^0.503.0",
@@ -29,10 +31,8 @@
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@rive-app/canvas": "^2.29.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.6",
