--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@primeng/themes": "^19.1.3",
     "@rive-app/canvas": "^2.29.0",
     "@stomp/stompjs": "^7.1.1",
+    "angularx-qrcode": "^19.0.0",
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "lucide-angular": "^0.503.0",
